# leap-tree-game

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
Formula/: leaptreegame.rb
docs/: plan.md  requirements.md
docs/poc-prompts/: 01-initial-prompt.md  02-next-prompt.md
leap-tree-game/: __init__.py  app.py
leap_tree_game/: __init__.py  app.py  i18n.py  telemetry.py  version.py
leap_tree_game/config/: settings.py  setup_wizard.py
leap_tree_game/game/: __init__.py  engine.py  layout.py  logic.py  prompts.py  state.py  text.py
leap_tree_game/models/: story.py
leap_tree_game/providers/: agent.py
leap_tree_game/translations/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
leap_tree_game/ui/: console.py  forms.py  screens.py
prompts/: __init__.py  ascii_art.md  initial.md  next.md  openings.md  storybook.md
src/leap_tree_game/: __init__.py  app.py
src/leap_tree_game/config/: settings.py  setup_wizard.py
src/leap_tree_game/game/: engine.py  prompts.py  state.py  text.py
src/leap_tree_game/models/: story.py
src/leap_tree_game/providers/: agent.py
src/leap_tree_game/ui/: console.py  forms.py  screens.py
tests/: conftest.py  test_config.py  test_engine_regeneration.py  test_engine_user_decisions.py  test_forms.py  test_game_state.py  test_prompt_formatting.py  test_provider_agent.py  test_story_response.py  test_telemetry.py  test_text.py  test_ui_rendering.py
