[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leaptreegame"
version = "0.2.3"

[project.scripts]
leaptreegame = "leap_tree_game.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["leap_tree_game*"]

[tool.setuptools.package-data]
"leap_tree_game" = ["translations/*.json"]
