[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leaptreegame"
version = "0.2.6"
dependencies = [
  "packaging>=24.0",
  "pydantic>=2.7",
  "pydantic-ai>=1.0.0",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
leaptreegame = "leap_tree_game.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["leap_tree_game*"]

[tool.setuptools.package-data]
"leap_tree_game" = ["translations/*.json"]
